Use java.net.URI instead of java.net.URL in kyero.com XML-format
see https://sworddance.com/blog/2007/09/09/code-review-4-always-read-the-documentationcode-aka-javaneturl-is-evil/